# valuerpro-project

./: .gitignore  AI_QA_IMPLEMENTATION_GUIDE.md  CLAUDE.md  DEVELOPMENT_PLAN.md  FIELD_OPTIMIZATION_REPORT.md  LAUNCH_INSTRUCTIONS.md  LAUNCH_STRATEGY.md  LAUNCH_SUCCESS.md  Makefile  PHASE1_STABILIZATION_COMPLETE.md  PRIVACY_POLICY.md  PROJECT_STATUS_REPORT.md  QA_TESTING_INSTRUCTIONS.md  README.md  README_TUNNELS.md  SECURITY.md  SECURITY_SETUP.md  SYSTEM_STATUS_REPORT.md  TERMS_OF_SERVICE.md  UNUSED_MODELS_CLEANUP.md  ai-testing-dashboard.html  ai-testing-final-demo.py  ai-testing-system-complete.py  ai_testing_validation_report.json  automated-test-report-generator.py  clear_browser_state.js  debug_extraction.py  deploy-ai-testing.bat  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  real-time-monitoring-dashboard.html  report structure.md  run-ai-tests.bat  run-ai-tests.sh  simple-report-generator.py  simple_test.py  test_batch_api.py  test_comprehensive_extraction.py  test_document.txt  (+5 more)
.claude/: settings.json  (+1 more)
backend/: .gitignore  =1.16.0  Dockerfile  Dockerfile.production  alembic.ini  pyproject.toml  test_connection.py  test_ocr_direct.py  test_report_generation.py
backend/alembic/: env.py
backend/app/: db.py  debug_batch_ocr.txt  deps.py  main.py  models.py  schemas.py
backend/tests/: ai_test_generators.py  conftest.py  test_ai_generated_scenarios.py  test_auth.py  test_document_generation.py  test_endpoints_comprehensive.py  test_location.py  test_ocr.py  test_regulations.py  test_reports.py  test_security.py  test_services.py  test_simple.py
(+225 files in other folders)
